# Tangent2

./: (DOT)cproject  (DOT)project  .cproject  .gitignore  .project  LICENSE  README  README.md  startup.asm
(DOT)settings/: com.lapis_tech.lexide.settings.prefs
Docs/: glib.md  heap-management.md  libcw.md  media.md  tangent-ui.md  time-management.md  virtual-machine.md
Release/: TANGENT2.HEX  Tangent2.abs  Tangent2.map  makefile  sources.mk  startup.prn  subdir.mk
Release/src/: io.asm  io.prn  legacy_vm.asm  legacy_vm.prn  main.asm  main.prn  subdir.mk  vm.asm  vm.prn
Tangent2/Lapis/: ML620909.DCL  ML620909.TRG  Notes
Tangent2/src/: Notes  base.h  bsod.c  bsod.h  debug.c  debug.h  desktop.c  desktop.h  fs.c  fs.h  heap.c  heap.h  libcw.c  libcw.h  main.c  media.c  media.h  startup.asm  (+5 more)
TangentSDK/: CMakeLists.txt  build-linux.sh  build-mingw64.sh  build.sh
TangentSDK/src/: main.cpp
TangentSDK/src/app/: DiscordRPCManager.cpp  DiscordRPCManager.h  discord_rpc.h
TangentSDK/src/buildtools/: combiner_t16.d  tas_t16.d  tl_t16.d  tmlc_t16.d
TangentSDK/src/buildtools/tests/: include_me.tasm  sample.tasm  sample.to  sample.tp
TangentSDK/src/editor/: CompletionPopup.cpp  CompletionPopup.h  SyntaxDefinition.cpp  SyntaxDefinition.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TangentKeywords.h
TangentSDK/src/resources/syntax/: default.json
TangentSDK/src/resources/themes/: dark.qss
TangentSDK/src/theme/: SyntaxTheme.cpp  SyntaxTheme.h
TangentSDK/src/ui/: ConsoleWidget.cpp  ConsoleWidget.h  EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  ProjectExplorer.cpp  ProjectExplorer.h  RomBuilderDialog.cpp  RomBuilderDialog.h  SettingsDialog.cpp  SettingsDialog.h  TabEditorWidget.cpp  TabEditorWidget.h  TitleBarWidget.cpp  TitleBarWidget.h
machine/: README
src/: base.h  io.c  io.h  lbase.h  lconfig.h  legacy_vm.c  lfunc_defs.h  main.c  thefont.h  vm.c  vm.h  vm_config.h
tr/: build_os.bat  main.res  makefile  sources.mk  subdir.mk
(+178 files in other folders)
